--- a/finans/css/style.css
+++ b/finans/css/style.css
@@ -1413,3 +1413,21 @@ form{
 }
 
 /*logo*/
+.modal form {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 20px rgba(0,0,0,0.2);
+  z-index: 999;
+}
+
+
+#sidebar {
+  overflow-y: auto;      /* Dikey scroll */
+  max-height: 100vh;     /* Ekran yüksekliğini aşmasın */
+}
+
