--- a/finans/css/style.css
+++ b/finans/css/style.css
@@ -190,8 +190,17 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   text-align: center;
   margin-top: 6px;
+}
 
+.date-input2{
 
+  height: 50px;
+  width: 180px;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  margin-top: 6px;
 }
 
 .main-title {
@@ -212,11 +221,8 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
   margin: 20px 0;
+  }
   
-  
-
-}
-
 .card {
     display: flex;
     flex-direction: column;
@@ -228,11 +234,6 @@ body {
     border-radius: 25px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.4);
     
-    
-    
-    
-    
-
 }
 
 
@@ -1431,3 +1432,34 @@ form{
   max-height: 100vh;     /* Ekran yüksekliğini aşmasın */
 }
 
+
+
+
+.main-header-cards {
+  display: flex;
+  justify-content: space-between; /* Kutucukları yatayda aralıklı yerleştir */
+  gap: 1rem;
+  margin-bottom: 20px; /* Alt boşluk, kartlarla arasındaki mesafeyi ayarlar */
+}
+
+.main-header-cards .card {
+  background-color: #ffffff;
+  color: #000;
+  padding: 0.8rem; /* İç boşlukları ayarlıyoruz */
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  width: 100px; /* Kartların genişliğini ayarlıyoruz */
+  height: 100px; /* Kartların yüksekliğini ayarlıyoruz */
+  font-size: 0.9rem; /* Yazı boyutunu biraz küçültüyoruz */
+  text-align: center;
+  flex-shrink: 0;
+}
+
+.main-header-cards .card .material-symbols-outlined {
+  font-size: 30px; /* İkon boyutunu ayarlıyoruz */
+  margin-bottom: 10px; /* İkon ile metin arasına boşluk ekliyoruz */
+}
+
+.main-header-cards .card .text-primary {
+  font-size: 1rem; /* Başlık font boyutunu ayarlıyoruz */
+}
